force-app/main/default/objects/SvcSolBizAttr__c/SvcSolBizAttr__c.object-meta.xml
<CustomObject>
    <label>Service-Solution-Biz. Attribute</label>
    <nameField>
        <label>SvcSolBizAttr Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service-Solution-Biz. Attribute</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>