force-app/main/default/objects/SvcSolBizAttr__c/fields/BizAttribute__c.field-meta.xml
<CustomField>
    <fullName>BizAttribute__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Biz. Attribute</label>
    <referenceTo>BizAttribute__c</referenceTo>
    <relationshipLabel>Service-Solution-Biz. Attribute</relationshipLabel>
    <relationshipName>Service_Solution_Biz_Attribute</relationshipName>
    <type>Lookup</type>
</CustomField>