force-app/main/default/objects/SvcSolBizAttr__c/fields/BusinessType__c.field-meta.xml
<CustomField>
    <fullName>BusinessType__c</fullName>
    <description>사업 유</description>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TI</fullName>
                <label>Implementation Business</label>
            </value>
            <value>
                <fullName>TS</fullName>
                <label>Service Business</label>
            </value>
            <value>
                <fullName>TD</fullName>
                <label>Sales Business</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>