force-app/main/default/objects/SvcSolBizAttr__c/fields/ExternalKey__c.field-meta.xml
<CustomField>
    <fullName>ExternalKey__c</fullName>
    <formula>Solution__r.Code__c + &apos;_&apos; + BizAttribute__r.Code__c</formula>
    <label>ExternalKey</label>
    <type>Text</type>
</CustomField>