force-app/main/default/objects/SvcSolBizAttr__c/fields/PSType__c.field-meta.xml
<CustomField>
    <fullName>PSType__c</fullName>
    <label>PS Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>