force-app/main/default/objects/SvcSolBizAttr__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <formula>Solution__r.Service__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service</label>
    <type>Text</type>
</CustomField>