force-app/main/default/objects/SvcSolBizAttr__c/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solution(c)</label>
    <referenceTo>Master_Solution__c</referenceTo>
    <relationshipLabel>Service-Solution-Biz. Attribute</relationshipLabel>
    <relationshipName>Service_Solution_Biz_Attribute</relationshipName>
    <type>Lookup</type>
</CustomField>