force-app/main/default/objects/SvcSolBizAttr__c/fields/WBSClass__c.field-meta.xml
<CustomField>
    <fullName>WBSClass__c</fullName>
    <description>WBS Class (수익인식기준)</description>
    <label>WBS Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SC</fullName>
            </value>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>SM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>