force-app/main/default/objects/SvcSolBizAttr__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Service__c</columns>
    <columns>Solution__c</columns>
    <columns>BizAttribute__c</columns>
    <columns>BusinessType__c</columns>
    <columns>WBSClass__c</columns>
    <columns>PSType__c</columns>
    <columns>Use__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service__c</field>
        <operation>contains</operation>
        <value>SaaS</value>
    </filters>
    <label>All</label>
</ListView>