force-app/main/default/objects/SvcSolBizAttr__c/listViews/emro.listView-meta.xml
<ListView>
    <fullName>emro</fullName>
    <columns>NAME</columns>
    <columns>Service__c</columns>
    <columns>Solution__c</columns>
    <columns>BizAttribute__c</columns>
    <columns>BusinessType__c</columns>
    <columns>WBSClass__c</columns>
    <columns>PSType__c</columns>
    <columns>Use__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service__c</field>
        <operation>contains</operation>
        <value>SRM</value>
    </filters>
    <label>emro</label>
    <sharedTo>
        <group>Admin</group>
    </sharedTo>
</ListView>